--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
           return;
         }
 
+        if (!inputNameValue.length) {
+          alert("Введите имя");
+          return;
+        }
+
         const elelment = document.createElement("div");
         elelment.innerHTML = inputNameValue;
         addedNamesContainer.appendChild(elelment);
